# ros-image-extractor

./: README.md
image_extractor/: CMakeLists.txt  package.xml
image_extractor/src/: image_extractor.cpp
